[package]
name = "catalyst"
authors = ["Aditya Chaturvedi"]
description = "A simple static site generator."
repository = "https://github.com/grapesalt/catalyst"
license = "MIT"
version = "0.0.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[dependencies]
pulldown-cmark = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4"
notify = "8.1.0"
walkdir = "2.5.0"
minijinja = "2.14.0"
lazy_static = "1.4.0"